--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-swipe-gestures": "^1.0.4",
     "react-navigation": "^4.0.10"
